@@ -55,6 +55,8 @@ static const struct luaL_Reg {{class.name}}_member_methods[] = {
 {% if not class:method('__tostring') then %}
   { {{string.format('%-15s, %-20s', '"__tostring"', class.name .. '___tostring')}} },
 {% end %}
+
+  { "deleted",       dub_isDeleted          },
   { NULL, NULL},
 };
 
