@@ -9,6 +9,7 @@
   * Added support for 'register' option in @dub.
   * Added support for custom destructor: 'destructor' option in @dub.
   * Added 'namespace' option (support for namespace constants and functions.
+  * Added :deleted() on all class bindings to detect C++ deleted objects from Lua.
 
 * Minor enhancement
   * Should not add namespace to typedef of template in namespace.
